--- a/site.yml
+++ b/site.yml
@@ -24,3 +24,12 @@
         - libapache2-mod-php
       state: latest
     when: ansible_distribution == "Debian"
+
+  - name: copy default html file for site
+    tags: apache,apache2,html
+    copy:
+      src: default_site.html
+      dest: /var/www/html/index.html
+      owner: root
+      group: root
+      mode: 0644
