updated repo to a template for basic django and react deployment

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,5 @@
 [defaults]
 inventory = inventory
-private_key_file = ~/.ssh/ansible
+private_key_file = ~/.ssh/<PRIVATE KEY>
+interpreter_python = /usr/bin/python3
+remote_user = <REMOTE USER>
