--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -13,13 +13,13 @@
 - hosts: all
   become: true
   tasks:
-    - name: create user
+    - name: create user <REMOTE USER>
       tags: always
       user:
         name: <REMOTE USER>
         groups: root
 
-    - name: add ssh key for eragon
+    - name: add ssh key for <REMOTE USER>
       tags: always
       authorized_key:
         user: <REMOTE USER>
