--- a/roles/web_servers/tasks/main.yml
+++ b/roles/web_servers/tasks/main.yml
@@ -50,6 +50,7 @@
 
 - name: Copy project directory to the remote server (rsync)(src)
   tags: copy, move, rsync
+  delegate_to: debian_10 # server alias from inventory file
   synchronize:
     src: "{{ localhost_dir }}//<LOCAL FOLDER CLONED INTO>"
     dest: <PROJECT REMOTE FOLDER>
